--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -278,6 +278,30 @@
                                 <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Workout" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wSJ-tH-1uT">
+                                <rect key="frame" x="16" y="262" width="169" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="stO-3G-lYU">
+                                <rect key="frame" x="209" y="262" width="66" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Rest label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OLI-Ir-9tR">
+                                <rect key="frame" x="16" y="312" width="169" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iMT-nE-zfj">
+                                <rect key="frame" x="209" y="311" width="66" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -285,9 +309,13 @@
                     <navigationItem key="navigationItem" id="VNP-Fn-LtV"/>
                     <connections>
                         <outlet property="descLabel" destination="M5W-VA-bXw" id="dxB-Jg-erw"/>
+                        <outlet property="restTimeLabel" destination="iMT-nE-zfj" id="IbZ-aA-MbM"/>
                         <outlet property="restTimerLabel" destination="pkb-Sr-rjQ" id="WaD-FX-MhO"/>
+                        <outlet property="restWorkoutLabel" destination="OLI-Ir-9tR" id="cz3-Lv-SuJ"/>
                         <outlet property="taskLabel" destination="Fqe-Pl-Ofw" id="Olu-FN-Cda"/>
                         <outlet property="timeLabel" destination="pma-4b-PED" id="CYO-q7-DfT"/>
+                        <outlet property="workoutLabel" destination="wSJ-tH-1uT" id="jkI-aV-cEd"/>
+                        <outlet property="workoutTimeLabel" destination="stO-3G-lYU" id="ZVp-uT-Sfk"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rWB-Nj-hLD" userLabel="First Responder" sceneMemberID="firstResponder"/>
