--- a/FHR/Base.lproj/Main.storyboard
+++ b/FHR/Base.lproj/Main.storyboard
@@ -224,7 +224,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0pW-Ki-aPs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1152" y="885"/>
+            <point key="canvasLocation" x="1153" y="1181"/>
         </scene>
         <!--Interval View Controller-->
         <scene sceneID="Tgh-JH-bg1">
@@ -319,6 +319,7 @@
                         <outlet property="tableView" destination="hWI-QN-Qsv" id="PaE-M8-nqp"/>
                         <outlet property="taskLabel" destination="Fqe-Pl-Ofw" id="Olu-FN-Cda"/>
                         <outlet property="timeLabel" destination="pma-4b-PED" id="CYO-q7-DfT"/>
+                        <segue destination="FMn-yo-4cm" kind="modal" identifier="infoSegue" id="GKa-6a-z4m"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rWB-Nj-hLD" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -676,7 +677,7 @@
         <simulatedScreenMetrics key="destination" type="retina4"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="wFi-Va-VqV"/>
+        <segue reference="GKa-6a-z4m"/>
     </inferredMetricsTieBreakers>
     <color key="tintColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
 </document>
